--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    username: admin
+    password: password
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -17,3 +17,8 @@ jwt:
   expiration_refresh_token: 10080000
 cors:
   allowed-origin: http://localhost:4200/
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
