--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,5 +31,8 @@ jobs:
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    - name: Run Maven build with debug
+      run: mvn clean package -X --file pom.xml
+  
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v3
