--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://authdb:5432/authdb
+    url: jdbc:postgresql://postgresql_auth_api:5432/authdb
     username: IgnacioVillarreal
     password: 12345678
   jpa:
@@ -16,7 +16,8 @@ jwt:
   expiration_token: 1440000
   expiration_refresh_token: 10080000
 cors:
-  allowed-origin: http://localhost:4200/
+  allowed-origins:
+    - http://localhost:4200/
 logging:
   level:
     org:
