--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,6 +9,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
+        default_schema: auth_schema
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
@@ -20,19 +21,9 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
-  expiration_token: ${JWT_EXPIRATION_TOKEN}
-  expiration_refresh_token: ${JWT_EXPIRATION_REFRESH_TOKEN}
+  expiration:
+    access-token-ms: ${JWT_EXPIRATION_TOKEN}
+    refresh-token-ms: ${JWT_EXPIRATION_REFRESH_TOKEN}
 
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGIN}
-
-rabbit:
-  exchange: user-registration-exchange
-  queue:
-    queue-registration-request: registration-request
-    queue-registration-response: registration-response
-    queue-registration-rollback: registration-rollback
-  routingKey:
-    routingKey-registration-request: registration-request
-    routingKey-registration-response: registration-response
-    routing-key-registration-rollback: registration-rollback
