--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,6 +19,11 @@ spring:
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
 
+  flyway:
+    enabled: true
+    schemas: auth_api
+    locations: classpath:db/migration
+
 jwt:
   secret: ${JWT_SECRET}
   expiration:
