--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,12 +10,12 @@ server:
 
 rabbit:
   exchange:
-    user-register: authapi.user.register.exchange
+    auth: authApi.exchange
   queue:
-    user-register-command: authapi.user.register.command.queue
-    user-register-reply: authapi.user.register.reply.queue
-    compensate-user-register-command: authapi.user.register.compensate.command.queue
+    user-register-command: authApi.userRegisterCommand.queue
+    user-register-reply: authApi.userRegisterReply.queue
+    compensate-user-register-command: authApi.userRegisterCompensateCommand.queue
   routing-key:
-    user-register-command: authapi.user.register.command
-    user-register-reply: authapi.user.register.reply
-    compensate-user-register-command: authapi.user.register.compensate.command
+    user-register-command: authApi.userRegisterCommand.routingKey
+    user-register-reply: authApi.userRegisterReply.routingKey
+    compensate-user-register-command: authApi.userRegisterCompensateCommand.routingKey
