the last dance is comming

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -62,6 +62,5 @@ rabbit:
 
 logging:
   level:
-    org:
-      springframework:
-        security: DEBUG
+    com.api: DEBUG
+    org.springframework.security: DEBUG
