the last dance is comming

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -68,6 +68,5 @@ rabbit:
 
 logging:
   level:
-    org:
-      springframework:
-        security: DEBUG
+    com.api: DEBUG
+    org.springframework.security: DEBUG
