--- a/authentication-api/Dockerfile
+++ b/authentication-api/Dockerfile
@@ -1,15 +1,15 @@
 FROM maven:3.9.8-eclipse-temurin-21 AS build
 
-WORKDIR /app
+WORKDIR authentication-api/app
 
-COPY pom.xml ./
+COPY authentication-api/pom.xml ./
 
-COPY src ./src
+COPY authentication-api/src ./src
 
 RUN mvn clean package -DskipTests
 
 FROM openjdk:21
 
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build authentication-api/app/target/*.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "/app.jar"]
